--- a/package.json
+++ b/package.json
@@ -15,5 +15,16 @@
   "bugs": {
     "url": "https://github.com/worsnupd/exercise2/issues"
   },
-  "homepage": "https://github.com/worsnupd/exercise2#readme"
+  "homepage": "https://github.com/worsnupd/exercise2#readme",
+  "devDependencies": {
+    "del": "^2.2.0",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-cssnano": "^2.1.1",
+    "gulp-filter": "^3.0.1",
+    "gulp-htmlmin": "^1.3.0",
+    "gulp-ng-annotate": "^1.1.0",
+    "gulp-sass": "^2.2.0",
+    "gulp-uglify": "^1.5.2"
+  }
 }
