--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "bootstrap": "^3.3.6",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
+    "gulp-add-src": "^0.2.0",
+    "gulp-angular-filesort": "^1.1.1",
     "gulp-concat": "^2.6.0",
     "gulp-cssnano": "^2.1.1",
     "gulp-filter": "^3.0.1",
     "gulp-htmlmin": "^1.3.0",
+    "gulp-load-plugins": "^1.2.0",
     "gulp-ng-annotate": "^1.1.0",
     "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.2"
