--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "gulp-cssnano": "^2.1.1",
     "gulp-filter": "^3.0.1",
     "gulp-htmlmin": "^1.3.0",
-    "gulp-inject": "^3.0.0",
+    "gulp-inject-string": "^1.1.0",
     "gulp-load-plugins": "^1.2.0",
     "gulp-ng-annotate": "^1.1.0",
     "gulp-sass": "^2.2.0",
