--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/worsnupd/exercise2#readme",
   "devDependencies": {
     "angular": "^1.5.0",
+    "angular-animate": "^1.5.0",
     "angular-route": "^1.5.0",
     "bootstrap": "^3.3.6",
     "del": "^2.2.0",
